--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <meta charset="utf-8">
-
     <title>News</title>
+
     <h1>News summary</h1>
 
   </head>
   <body>
+
+    <h3>Headline 1</h3>
+    <script type="text/javascript">
+      newsApp()
+    </script>
 
   </body>
 </html>
